--- a/style.css
+++ b/style.css
@@ -1,97 +1,431 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-decoration:none ;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-boby{
-    width: 100%;
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Poppins";
+  /* background-color: #111; */
 }
 
-.header{
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 0.8rem;
+boby {
+  width: 100%;
 }
-.header h1{
-    color: red;
-    font-size: 1.2rem;
+/* navegação */
+.header {
+  background-color: rgb(36, 36, 36);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.8rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
-.header h1 span{
-    color: white;
+.header h1 {
+  color: red;
+  font-size: 1.2rem;
+  font-family: "Poppins";
+  align-items: top;
 }
-.navigation{
- gap: 10px;
- display: flex;
- align-items: center;
-}
-.navigation li a{
- width: 0px;
- color: white;
- padding: 10px;
- font-size: 1.4rem;
+.header h1 span {
+  color: white;
 }
 
-.navigation li a:hover::after{
-    width: 100%;
-    height: 0px;
-    border-bottom: 4px solid #dc3545;
-    padding: 10px;
+.navigation {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  font-family: "Poppins";
 }
 
-.navigation li a::after{
-    width: 100%;
-    height: 0px;
-    border-bottom: 4px solid #dc3545;
-    padding: 10px;
+.icon {
+  margin: 0 3rem;
+  display: none;
 }
-/* s
+
+.navigation li a {
+  width: 0px;
+  color: white;
+  padding: 0.6rem;
+  font-size: 1.4rem;
+  font-family: "Poppins";
+}
+
+.navigation li a::after {
+  display: block;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-bottom: 4px solid transparent;
+  transition: 0.8s;
+}
+
+.navigation li a:hover::after {
+  width: 100%;
+  height: 0px;
+  padding: 0px;
+  border-bottom: 4px solid rgb(3, 50, 90, 1);
+}
+
 /* seção */
-.section{
- display: grid;
- grid-template-columns: 1fr 1fr;
- gap:3.5rem;
- padding: 3.5rem;
- background-color: black;
- animation: inicializar .7s forwards;
+.section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3.5rem;
+  padding: 3.5rem;
+  background-color: black;
+  animation: efectTraslate 0.7s forwards;
 }
-.section div{
- margin-top: 120px;
- align-self: start;
- display: grid;
- gap: 30px;
+.section div {
+  margin-top: 120px;
+  align-self: start;
+  display: grid;
+  gap: 30px;
 }
-.title-h3{
- font-weight: 600;
- color: rgb(182, 182, 182);
- font-family: 'Poppins';
+.title-h3 {
+  font-weight: 600;
+  color: rgb(182, 182, 182);
+  font-family: "Poppins";
 }
-.title-h2{
- color: white;
- font-family: 'Poppins';
- font-weight: 600;
+.title-h2 {
+  color: white;
+  font-family: "Poppins";
+  font-weight: 600;
 }
-.description{
- font-family: 'Poppins';
- font-weight: 200;
- color: #f7f7f7;
+.description {
+  font-family: "Poppins";
+  font-weight: 200;
+  color: #f7f7f7;
 }
 
-.dowload{
-    align-items: center;
-    padding: 15px 40px;
-    justify-self: start ;
-    color: white;
-    border-radius:5px ;
-    border: 2px solid white;
+.dowload {
+  align-items: center;
+  padding: 15px 40px;
+  justify-self: start;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid white;
 }
-.image{
-    max-width: 100%;
+.image img {
+  max-width: 100%;
+  border-radius: 50%;
+  border: 8px solid rgb(3, 50, 90);
+}
+
+.title-h2::after {
+  content: "|";
+  margin-left: 5px;
+  opacity: 1;
+  animation: pisca 0.5s infinite;
+}
+
+@keyframes pisca {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes efectTraslate {
+  from {
+    opacity: 0;
+    transform: translate3d(0px, -60px, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+/* about me */
+
+main {
+  background-color: #111;
+  color: white;
+}
+
+main .about {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  justify-content: center;
+  padding: 40px;
+}
+
+.about_title {
+  margin: 30px 0;
+  grid-column: 1/-1;
+  text-align: center;
+  color: #fff;
+}
+
+.about_title h1 {
+  font-size: 2.5rem;
+  color: #ff5d56;
+  margin-bottom: 15px;
+  font-family: "Berkshire Swash", cursive;
+}
+
+.about_title p {
+  color: #707070;
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+.about_title div {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.about_title span {
+  display: block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: #dc3545;
+}
+
+.about img {
+  animation: sideSesion 0.5s ease-in-out forwards;
+  cursor: pointer;
+  grid-row: 2;
+  max-width: 100%;
+  border-radius: 4px;
+  filter: blur(0);
+}
+
+.about img:hover {
+  transition: 0.5s ease-in;
+  filter: blur(1px);
+}
+
+.about_content {
+  animation: aboutSecionEffect 0.6s ease-in-out forwards;
+  grid-column: 1/-1;
+  display: grid;
+  color: #707070;
+  /* grid-template-columns: 1fr 1fr; */
+}
+
+/* .about_texto {
+  display: grid;
+  grid-column: 1/-1;
+  grid-template-columns: 1fr 1fr;
+}
+
+.about_texto h1 {
+  font-size: 2.3rem;
+  color: #fff;
+  grid-column: 1/-1;
+}
+
+.about_texto h1::after {
+  background-color: #ff5d56;
+  height: 6px;
+  width: 60px;
+  margin: 20px 0;
+  content: "";
+  display: block;
+  border-radius: 5px;
+}
+
+.about_texto p {
+  font-size: 1.3rem;
+  grid-row: 2;
+  grid-column: 1/-1;
+} */
+
+.about_info {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 1/-1;
+  gap: 15px;
+  align-items: center;
+}
+
+.about_info i {
+  color: #dc3545;
+  display: inline-block;
+  padding-right: 15px;
+  font-size: 1.5rem;
+}
+
+.about_info p {
+  font-size: 0.9rem;
+}
+
+@keyframes aboutSecionEffect {
+  from {
+    transition: 0.5s;
+    transform: translate3d(60px, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes sideSesion {
+  from {
+    transition: 0.5s;
+    transform: translate3d(-60px, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+/* responsividade */
+@media (max-width: 700px) {
+  .section div {
+    margin-top: 3rem;
+    align-self: center;
+    gap: 1rem;
+  }
+  .image{
+    grid-column: 1/-1;
+    border-radius: 0;
+    animation: sideSesion 0.5s ease-in-out forwards;
+    cursor: pointer;
+    border-radius: 4px;
+    filter: blur(0);
+  }
+  .about img {
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+  .about_info {
+    grid-column: 1/-1;
+    align-items: center;
+    font-size: 0.7rem;
+  }
+  .header {
+    justify-content: space-between;
+  }
+  .about_content {
+    grid-column: 1/-1;
+  }
+  .navigation {
+    display: none;
+  }
+
+  .description {
+    font-size: 0.9rem;
+    grid-row: 2;
+    grid-column: 1/-1;
+  }
+  .icon {
+    display: flex;
+    color: #f7f7f7;
+    font-size: 2rem;
+  }
+  .navigation.active {
+    background: linear-gradient(
+      rgba(42, 41, 41, 0.176),
+      rgba(60, 55, 55, 0.724)
+    );
+    position: absolute;
+    display: grid;
+    top: 4rem;
+    color: white;
+    z-index: 1;
+    padding: 2.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 0 0 4px 4px;
+    right: 20px;
+    animation: efectTraslate 0.8s ease-in-out forwards;
+  }
+}
+/* projetos */
+
+/* PROJECTS */
+
+.projects {
+  padding: 30px;
+  display: grid;
+  gap: 30px;
+  justify-content: center;
+  background-color: #151515;
+}
+
+.projects ul {
+  justify-content: center;
+  display: flex;
+  gap: 30px;
+}
+
+.project_models ul li {
+  cursor: pointer;
+  font-family: "Poppins";
+  background-color: #222;
+  border: 1px solid #333;
+  color: #707070;
+  padding: 6px 20px;
+}
+
+.project_models ul li.active {
+  background-color: #dc3545;
+  color: #151515;
+  font-weight: bold;
+}
+
+.projects_github ul {
+  display: grid;
+  margin-top: 60px;
+  gap: 20px;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.projects_github ul li {
+  /* display: none; */
+  max-width: 100%;
+  height: 100%;
+}
+
+.projects_github ul li.active {
+  display: block;
+  animation: animationButton 2s ease-in-out forwards;
+}
+
+.projects_github ul li img {
+  cursor: pointer;
+  max-width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.projects a {
+  background-color: #222;
+  text-decoration: none;
+  padding: 20px 40px;
+  justify-self: center;
+  border-radius: 3px;
+  color: #707070;
+  border: 1px solid #333;
+}
+
+@keyframes animationButton {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -90px, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0px, 0);
+  }
 }
