--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
   --color-primary: black;
   --color-secondary:rgb(40, 40, 40);
   --color-tertiary: white;
+  --color-details: rgb(3, 50, 90, 1);
   --color-model:rgb(57, 57, 57);
+  --color-model-project:rgba(86, 86, 86, 0.7);
+ 
 }
 * {
   padding: 0;
@@ -14,10 +17,11 @@
   text-decoration: none;
   font-family: "Poppins";
 }
- body{
-  background-color: var(--color-primary);
+ .body{
   min-width: 280px;
   max-width: 100%;
+  background-color: var(--color-primary);
+  
  }
 
 /* navegação */
@@ -35,7 +39,7 @@
   color: red;
   font-size: 1.2rem;
   font-family: "Poppins";
-  align-items: top;
+  margin-bottom: 0;
 }
 .header h1 span {
   color: var(--color-tertiary);
@@ -56,8 +60,8 @@
 .navigation li a {
   width: 0px;
   color: var(--color-tertiary);
-  padding: 0.6rem;
-  font-size: 1.4rem;
+  padding: 0.6rem 0.6rem;
+  font-size: 1.3rem;
   font-family: "Poppins";
 }
 
@@ -74,7 +78,7 @@
   width: 100%;
   height: 0px;
   padding: 0px;
-  border-bottom: 4px solid rgb(3, 50, 90, 1);
+  border-bottom: 4px solid var(--color-details);
 }
 
 /* seção */
@@ -83,11 +87,11 @@
   grid-template-columns: 1fr 1fr;
   gap: 3.5rem;
   padding: 3.5rem;
-  background-color: var(--color-primary);
+  background-color: transparent;
   animation: efectTraslate 0.7s forwards;
 }
 .section div {
-  margin-top: 120px;
+  margin-top: 7rem;
   align-self: start;
   display: grid;
   gap: 30px;
@@ -105,7 +109,7 @@
 .description {
   font-family: "Poppins";
   font-weight: 200;
-  color: #f7f7f7;
+  color: var(--color-tertiary);
 }
 .description h1{
   margin-bottom: 1rem;
@@ -117,13 +121,39 @@
   justify-self: start;
   color: var(--cor-tertiary);
   border-radius: 5px;
-  border: 2px solid white;
+  border: 2px solid var(--color-tertiary);
   cursor: pointer;
+}
+
+.download:hover{
+  background-color: var(--color-secondary);
 }
 .image img {
   max-width: 100%;
   border-radius: 50%;
   border: 8px solid rgb(3, 50, 90);
+}
+
+.theme{
+  display: block;
+  justify-content: end;
+}
+.theme input{
+ width: 1.6rem;
+ height: 1.6rem;
+}
+.theme input:checked::before{
+  font-family: "Poppins";
+  content: 'modo escuro';
+}
+.theme input::before{
+  content: 'modo claro';
+  font-family: "Poppins";
+  align-items: center;
+  display: flex;
+  width: 7.5rem;
+  margin-left: -6.0rem;
+  color: var(--color-tertiary);
 }
 
 .title-h2::after {
@@ -158,7 +188,7 @@
 /* about me */
 
 main {
-  background-color: #111;
+  background-color: transparent;
   color: var(--cor-tertiary);
   display: flex;
   justify-content: center;
@@ -185,7 +215,7 @@ main .about {
 
 .about_title h1 {
   font-size: 2.5rem;
-  color: #ff5d56;
+  color: #c0100a;
   margin-bottom: 15px;
   font-family: "Berkshire Swash", cursive;
 }
@@ -259,14 +289,11 @@ main .about {
   }
 }
 
-
-/* projetos */
-
 /* PROJECTS */
 .web_project{
   margin-top: 3rem;
   display: flex;
-  background-color: var(--color-primary);
+  background-color: transparent;
   justify-content: center;
 }
 
@@ -274,7 +301,7 @@ main .about {
   width: 78%;
   padding: 30px;
   display: grid;
-  gap: 30px;
+  gap: 2rem;
   justify-content: center;
   background-color: var(--color-model);
   margin-bottom: 5rem;
@@ -290,26 +317,60 @@ main .about {
 .projects_github ul {
   display: grid;
   margin-top: 60px;
-  gap: 20px;
+  gap:  10px;
   justify-content: center;
   grid-template-columns: repeat(2, 1fr);
 }
 
 .projects_github ul li {
+  display: block;
   max-width: 100%;
   height: 100%;
+  background-color: var(--color-model-project);
+  border-radius: 6px;
 }
 
 .projects_github ul li.active {
   display: block;
   animation: animationButton 2s ease-in-out forwards;
 }
+.projects_github ul li .container{
+  display: grid;
+  padding: 1.5rem;
+  gap: 2rem;
+}
 
-.projects_github ul li a img {
+.projects_github ul li .container img {
   cursor: pointer;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   border-radius: 4px;
+  justify-content: center;
+}
+.projects_github ul li .container .btn_project{
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+
+}
+.projects_github ul li .container .btn_project a{
+  align-items: center;
+  padding: 0.7rem 1rem;
+  color: var(--color-tertiary);
+  border-radius: 5px;
+  border: 2px solid white;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+}
+.projects_github ul li .container .btn_project a:hover{
+background-color: rgba(103, 105, 122, 0.5);
+}
+.btn_site{
+  background-color: var(--color-details);
+}
+.body.modeWhite  .projects_github  .btn_site{
+  background-color: rgb(153, 149, 149);
 }
 .projects .more_project{
   display: flex;
@@ -345,8 +406,6 @@ footer{
   width: 100%;
   position: fixed;
   bottom: 0;
-  
-  
 }
 .footer_socials{
   color: var(--cor-tertiary);
@@ -361,6 +420,14 @@ footer{
   color: var(--color-tertiary);
   font-size: 1.5rem;
   cursor: pointer;
+  padding: 0.4rem;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  transition: 0.6s;
+}
+.footer_socials li a i:hover {
+  background-color: rgb(134, 134, 134, 0.4);
 }
 
 .footer_rights{
@@ -438,15 +505,24 @@ footer{
   .icon {
     display: flex;
     color: var(--color-tertiary);
-    font-size: 2rem;
+    font-size: 1.8rem;
+    padding: 0.7rem;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    transition: 0.6s;
+  }
+  .icon:hover{
+    background-color: rgb(134, 134, 134, 0.4);
   }
   .navigation.active {
     background-color: var(--color-tertiary);
-    background: linear-gradient(rgba(167, 167, 167, 0.5), rgb(107, 100, 100), rgb(57, 56, 56), black
+    /* background: linear-gradient(50deg,rgb(48, 46, 46,0.8), rgb(200, 200, 200, 0.7)) ; */
+    background: linear-gradient(rgba(202, 200, 200, 0.3), rgb(107, 100, 100, 0.5), rgb(57, 56, 56, 0.8), rgb(30, 29, 29, 0.9)
     );
     position: absolute;
     display: grid;
-    top: 3.5rem;
+    top: 4.4rem;
     color: var(--cor-tertiary);
     z-index: 1;
     padding: 2.5rem;
@@ -465,6 +541,10 @@ footer{
 
   .projects .more_project a{
     padding: 0.5rem 1rem;
+  }
+
+  .projects_github ul {
+    grid-template-columns: repeat(1, 1fr);
   }
   
 }
