--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@
   animation: efectTraslate 0.7s forwards;
 }
 .section div {
-  margin-top: 7rem;
-  align-self: start;
+  margin-top: 3rem;
+  align-items: flex-end;
   display: grid;
   justify-items: center;
   gap: 30px;
